Correction accessibilité (contraste)

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
     --text-color: #fff;
     --text-color-2: #fff;
     --text-color-3: rgb(204, 0, 0);
+    --var-bar-progress: rgb(0, 2, 77);
     --overlay-color: rgb(12 12 12 / 63%);
 }
 
@@ -15,6 +16,7 @@
     --text-color: #000;
     --text-color-2: #000;
     --text-color-3: rgb(204, 0, 0);
+    --var-bar-progress: rgb(170, 159, 0);
     --overlay-color: rgb(255 255 255 / 70%);
 }
 
